--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.20.0",
+    "react-to-print": "^2.14.15",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
